--- a/pr-1/Makefile
+++ b/pr-1/Makefile
@@ -1,9 +1,12 @@
-CPPFLAGS = CPPFLAGS ?= -std=c++17 -g -Wall -Wextra 
+CPPFLAGS = CPPFLAGS ?= -std=c++17 -g -Wall -Wextra -Werror -g
 
 build: pr-1
 
-clean:
-	rm -f pr-1
-
 pr-1: pr-1.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $^
+
+do:
+	run pr-1
+
+clean:
+	$(RM) pr-1
