just a snaggy bug left

--- a/pr-2/Makefile
+++ b/pr-2/Makefile
@@ -2,11 +2,6 @@ CPPFLAGS = CPPFLAGS ?= -std=c++17 -g -Wall -Wextra -Werror -g
 
 build: pr-2
 
-pr-2: main.cpp
+pr-2: main.cpp book.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
-do:
-	run pr-2
-
-clean:
-	$(RM) pr-2
