--- a/pr-3/Makefile
+++ b/pr-3/Makefile
@@ -2,6 +2,6 @@ CPPFLAGS = CPPFLAGS ?= -std=c++17 -g -Wall -Wextra -Werror -g
 
 build: pr-3
 
-pr-3: main.cpp
+pr-3: main.cpp subscriber.cpp newspapercompany.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
